--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     const state = {
       messages: [],
       theme: localStorage.getItem('theme') || 'dark',
-      groqApiKey: 'YOUR_GROQ_API_KEY_HERE', // Replace with your Groq API key
+      groqApiKey: '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', // Replace with your Groq API key
       geminiApiKey: 'YOUR_GEMINI_API_KEY_HERE', // Replace with your Gemini API key
       aiAvatar: 'https://i.postimg.cc/ZR0jj3Yr/Black-and-White-Minimalist-Simple-Modern-Technology-AI-Logo-20250824-182710-0000.png',
       userName: 'User',
