--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Vynix AI Chat</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@4.0.0/marked.min.js"></script>
+  <script src="https://unpkg.com/brain.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -228,10 +229,6 @@
       <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle theme">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
       </button>
-      <button id="speech-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle speech" aria-pressed="true">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-on"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 010 14.14M15.54 8.46a5 5 0 010 7.07"/></svg>
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-off hidden"><path d="M11 5L6 9H2v6h4l5 4V5zM22 9l-6 6M16 9l6 6"/></svg>
-      </button>
     </div>
     <div class="welcome-container" id="welcome-container">
       <div id="nebula-container" class="nebula-container">
@@ -256,15 +253,9 @@
     const state = {
       messages: [],
       theme: localStorage.getItem('theme') || 'dark',
-      geminiApiKey: 'AIzaSyBZb3DQUktOdE_3IKDKdGLOB2B75nc9zjw', // Provided API key
       aiAvatar: 'https://i.postimg.cc/ZR0jj3Yr/Black-and-White-Minimalist-Simple-Modern-Technology-AI-Logo-20250824-182710-0000.png',
       userName: 'User',
       nebulaAnimationFrame: null,
-      speechEnabled: localStorage.getItem('speechEnabled') !== 'false',
-      hasSpokenWelcome: false,
-      audioCache: new Map(),
-      currentAudio: null,
-      userHasInteracted: false,
     };
 
     const elements = {
@@ -273,24 +264,32 @@
       sendButton: document.getElementById('send-button'),
       newChatButton: document.getElementById('new-chat-button'),
       themeToggle: document.getElementById('theme-toggle'),
-      speechToggle: document.getElementById('speech-toggle'),
       welcomeContainer: document.getElementById('welcome-container'),
-      welcome: document.getElementById('welcome-message'),
       nebulaContainer: document.getElementById('nebula-container'),
       nebulaCanvas: document.getElementById('nebula-canvas'),
     };
 
-    // Track user interaction for autoplay
-    function setUserInteraction() {
-      state.userHasInteracted = true;
-      document.removeEventListener('click', setUserInteraction);
-      document.removeEventListener('keypress', setUserInteraction);
-      if (state.speechEnabled && !state.hasSpokenWelcome && !elements.welcomeContainer.classList.contains('hidden')) {
-        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-      }
-    }
-    document.addEventListener('click', setUserInteraction);
-    document.addEventListener('keypress', setUserInteraction);
+    // Initialize brain.js neural network
+    const net = new brain.recurrent.LSTM();
+
+    // Initial training data
+    const trainingData = [
+      { input: 'hello', output: 'Hi there!' },
+      { input: 'how are you', output: 'I\'m good, thanks! How about you?' },
+      { input: 'what is your name', output: 'I\'m Vynix AI.' },
+      { input: 'tell me a joke', output: 'Why did the scarecrow win an award? Because he was outstanding in his field!' },
+    ];
+
+    // Train the network initially
+    net.train(trainingData, {
+      iterations: 200,
+      log: true,
+      logPeriod: 10,
+      learningRate: 0.01
+    });
+
+    // To make it "learn on its own", we'll incrementally train on new conversations
+    let conversationHistory = [];
 
     function showToast(message, type = 'error') {
       const toast = document.createElement('div');
@@ -299,154 +298,6 @@
       toast.role = 'alert';
       document.body.appendChild(toast);
       setTimeout(() => toast.remove(), 3000);
-    }
-
-    async function speakText(text, isWelcome = false) {
-      if (!state.speechEnabled || window.matchMedia('(prefers-reduced-motion: reduce)').matches) return;
-      if (!text || text.length > 800) {
-        showToast('Text is empty or too long for speech', 'error');
-        return;
-      }
-      if (!state.userHasInteracted && isWelcome) {
-        showToast('Please interact with the page to enable audio', 'error');
-        return;
-      }
-      if (state.currentAudio) {
-        if (state.currentAudio instanceof Audio) {
-          state.currentAudio.pause();
-        } else {
-          window.speechSynthesis.cancel();
-        }
-        state.currentAudio = null;
-      }
-
-      const cacheKey = `${text}_${isWelcome}`;
-      if (state.audioCache.has(cacheKey)) {
-        const audio = state.audioCache.get(cacheKey);
-        audio.currentTime = 0;
-        state.currentAudio = audio;
-        audio.play().catch((e) => {
-          console.error('Cached audio playback error:', e);
-          showToast('Cached audio playback failed: ' + e.message, 'error');
-        });
-        if (isWelcome) state.hasSpokenWelcome = true;
-        return;
-      }
-
-      const maxRetries = 2;
-      let attempt = 0;
-      while (attempt <= maxRetries) {
-        try {
-          const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-              'x-goog-api-key': state.geminiApiKey,
-            },
-            body: JSON.stringify({
-              contents: [{
-                parts: [{
-                  text: isWelcome ? "Say in a friendly, natural male voice: Hey, I'm Vynix AI... What's on your mind?" : `Say in a friendly, natural male voice: ${text}`
-                }]
-              }],
-              generationConfig: {
-                responseModalities: ['AUDIO'],
-                speechConfig: {
-                  voiceConfig: {
-                    prebuiltVoiceConfig: {
-                      voiceName: 'Kore'
-                    }
-                  }
-                }
-              }
-            })
-          });
-
-          if (!response.ok) {
-            throw new Error(`HTTP ${response.status}: ${response.statusText}`);
-          }
-
-          const data = await response.json();
-          if (!data.candidates?.[0]?.content?.parts?.[0]?.inlineData?.data) {
-            throw new Error('Invalid audio data from Gemini');
-          }
-
-          const audioData = data.candidates[0].content.parts[0].inlineData.data;
-          let arrayBuffer;
-          try {
-            arrayBuffer = Uint8Array.from(atob(audioData), c => c.charCodeAt(0)).buffer;
-          } catch (e) {
-            throw new Error('Failed to decode base64 audio: ' + e.message);
-          }
-
-          const blob = new Blob([arrayBuffer], { type: 'audio/mp3' });
-          const audio = new Audio(URL.createObjectURL(blob));
-          state.audioCache.set(cacheKey, audio);
-          state.currentAudio = audio;
-          audio.play().catch((e) => {
-            console.error('Gemini audio playback error:', e);
-            showToast('Gemini audio playback failed: ' + e.message, 'error');
-            speakWithWebSpeech(text, isWelcome);
-          });
-          if (isWelcome) state.hasSpokenWelcome = true;
-          return;
-        } catch (e) {
-          console.error(`Gemini TTS error (attempt ${attempt + 1}):`, e);
-          let errorMessage = 'Speech synthesis failed';
-          if (e.message.includes('401')) errorMessage = 'Invalid Gemini API key';
-          else if (e.message.includes('429')) errorMessage = 'Gemini API rate limit exceeded';
-          else if (e.message.includes('400')) errorMessage = 'Invalid Gemini request (check model/voice)';
-          else if (e.message.includes('422')) errorMessage = 'Invalid input text';
-          else if (e.message.includes('500')) errorMessage = 'Gemini server error, try again later';
-          else if (e.message.includes('Invalid audio data')) errorMessage = 'Invalid audio data from Gemini';
-          else if (e.message.includes('Failed to decode')) errorMessage = 'Failed to decode audio data';
-
-          if (attempt < maxRetries && (e.message.includes('429') || e.message.includes('500'))) {
-            attempt++;
-            await new Promise(resolve => setTimeout(resolve, 1000 * attempt));
-            continue;
-          }
-
-          showToast(errorMessage, 'error');
-          await speakWithWebSpeech(text, isWelcome);
-          return;
-        }
-      }
-    }
-
-    async function speakWithWebSpeech(text, isWelcome) {
-      return new Promise((resolve) => {
-        const utterance = new SpeechSynthesisUtterance(isWelcome ? "Hey, I'm Vynix AI... What's on your mind?" : text);
-        utterance.rate = 0.9;
-
-        const setVoice = () => {
-          const voices = window.speechSynthesis.getVoices();
-          const voice = voices.find(v => v.lang === 'en-US') || voices[0];
-          utterance.voice = voice;
-          state.currentAudio = utterance;
-          utterance.onend = () => {
-            state.currentAudio = null;
-            if (isWelcome) state.hasSpokenWelcome = true;
-            resolve();
-          };
-          utterance.onerror = (e) => {
-            console.error('Web Speech API error:', e);
-            showToast('Web Speech API failed: ' + e.error, 'error');
-            state.currentAudio = null;
-            resolve();
-          };
-          window.speechSynthesis.speak(utterance);
-        };
-
-        if (window.speechSynthesis.getVoices().length === 0) {
-          window.speechSynthesis.onvoiceschanged = () => {
-            window.speechSynthesis.onvoiceschanged = null;
-            setVoice();
-          };
-        } else {
-          setVoice();
-        }
-      });
     }
 
     function startNebulaAnimation() {
@@ -492,27 +343,7 @@
     function stopNebulaAnimation() {
       cancelAnimationFrame(state.nebulaAnimationFrame);
       elements.nebulaContainer.classList.add('hidden');
-      if (state.currentAudio) {
-        if (state.currentAudio instanceof Audio) {
-          state.currentAudio.pause();
-        } else {
-          window.speechSynthesis.cancel();
-        }
-        state.currentAudio = null;
-      }
     }
-
-    elements.speechToggle.addEventListener('click', () => {
-      state.speechEnabled = !state.speechEnabled;
-      localStorage.setItem('speechEnabled', state.speechEnabled);
-      elements.speechToggle.setAttribute('aria-pressed', state.speechEnabled);
-      elements.speechToggle.querySelector('.speech-on').classList.toggle('hidden', !state.speechEnabled);
-      elements.speechToggle.querySelector('.speech-off').classList.toggle('hidden', state.speechEnabled);
-      showToast(state.speechEnabled ? 'Speech enabled' : 'Speech disabled', 'success');
-      if (state.speechEnabled && !elements.welcomeContainer.classList.contains('hidden') && !state.hasSpokenWelcome && state.userHasInteracted) {
-        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-      }
-    });
 
     elements.themeToggle.addEventListener('click', () => {
       state.theme = state.theme === 'dark' ? 'light' : 'dark';
@@ -522,14 +353,11 @@
 
     function clearChat() {
       state.messages = [];
-      state.hasSpokenWelcome = false;
-      state.audioCache.clear();
       elements.chatMessages.innerHTML = '';
       elements.welcomeContainer.classList.remove('hidden');
       startNebulaAnimation();
-      if (state.speechEnabled && state.userHasInteracted) {
-        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-      }
+      conversationHistory = [];
+      net.train(trainingData); // Retrain with initial data
     }
 
     elements.newChatButton.addEventListener('click', clearChat);
@@ -577,9 +405,6 @@
       div.append(actions);
       elements.chatMessages.appendChild(div);
       elements.chatMessages.scrollTop = elements.chatMessages.scrollHeight;
-      if (msg.sender === 'ai' && state.speechEnabled) {
-        speakText(msg.text);
-      }
       return div;
     }
 
@@ -590,6 +415,7 @@
       stopNebulaAnimation();
       if (sender === 'user') {
         renderMessage(msg, msg.id);
+        conversationHistory.push({ input: text });
       } else {
         const tempMsg = {...msg, text: ''};
         const el = renderMessage(tempMsg, msg.id);
@@ -612,12 +438,12 @@
           } else {
             indicator.remove();
             p.innerHTML = marked.parse(text);
-            if (state.speechEnabled) {
-              speakText(text);
-            }
           }
         };
         type();
+        const lastInput = conversationHistory[conversationHistory.length - 1].input;
+        conversationHistory[conversationHistory.length - 1].output = text;
+        net.train([{ input: lastInput, output: text }], { iterations: 50 });
       }
     }
 
@@ -627,20 +453,12 @@
       return div.innerHTML;
     }
 
-    async function getAIResponse(question) {
-      try {
-        const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${state.geminiApiKey}`, {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({contents: [{parts: [{text: `You are Vynix AI, a helpful assistant. Query: ${question}`}]}]})
-        });
-        if (!res.ok) throw new Error(res.statusText);
-        const data = await res.json();
-        return data.candidates[0].content.parts[0].text;
-      } catch {
-        showToast('Request failed', 'error');
-        return 'Sorry, something went wrong. Try again.';
+    function getAIResponse(question) {
+      let response = net.run(question);
+      if (!response || response.trim() === '') {
+        response = "I'm still learning! Can you teach me more?";
       }
+      return response;
     }
 
     const send = async () => {
@@ -650,7 +468,7 @@
       try {
         await appendMessage(sanitize(q), 'user', state.userName);
         elements.chatInput.value = '';
-        const res = await getAIResponse(q);
+        const res = getAIResponse(q);
         await appendMessage(res, 'ai', 'Vynix AI');
       } catch {
         showToast('Error sending message', 'error');
@@ -671,11 +489,7 @@
     });
 
     document.body.dataset.theme = state.theme;
-    elements.speechToggle.setAttribute('aria-pressed', state.speechEnabled);
-    elements.speechToggle.querySelector('.speech-on').classList.toggle('hidden', !state.speechEnabled);
-    elements.speechToggle.querySelector('.speech-off').classList.toggle('hidden', state.speechEnabled);
     startNebulaAnimation();
-    // Defer welcome audio until user interaction
   </script>
 </body>
 </html>
